# Poetry_FastApi

./: pyproject.toml
app/: main.py
app/controller/: controller.py
app/routes/: temp.py
