[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ali Amjad <shaheenali957@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.23.2"
fastapi = "^0.101.0"
pymongo = "^4.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start="app.main:start"